--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -37,7 +37,20 @@ jobs:
       # GitHub Actions環境では、バックグラウンドプロセスが後続ステップで利用可能
 
     - name: Wait for server to start
-      run: sleep 5 # サーバー起動を待機 (必要に応じて調整)
+      run: |
+        echo "Waiting for server to start..."
+        timeout=60 # 最大待機時間 (秒)
+        start_time=$(date +%s)
+        while ! curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/ | grep -q 200; do
+          current_time=$(date +%s)
+          elapsed_time=$((current_time - start_time))
+          if [ $elapsed_time -ge $timeout ]; then
+            echo "ERROR: Server did not start within ${timeout} seconds."
+            exit 1
+          fi
+          sleep 2
+        done
+        echo "Server started!"
 
     - name: Run Vegeta tests
       run: |
