--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -23,7 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         go mod download
-        go install github.com/tsenart/vegeta/v12@latest
+        # vegeta コマンドは不要になったので削除
+        # go install github.com/tsenart/vegeta/v12@latest
 
     - name: Run Go Benchmarks
       run: go test -bench=. -benchmem ./internal/compressor > go_benchmark_results.txt
@@ -39,13 +40,6 @@ jobs:
     - name: Wait for server to start
       run: |
         echo "Waiting for server to start..."
-    - name: Run Load Tests
-      run: go test -v -run ^TestLoad$ -timeout 0 ./internal/handler/...
-      # -v: 詳細出力
-      # -run ^TestLoad$: TestLoad関数のみ実行
-      # -timeout 0: タイムアウト無制限
-      # ./internal/handler/...: テスト対象パッケージ
-
         timeout=60 # 最大待機時間 (秒)
         start_time=$(date +%s)
         while ! curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/ | grep -q 200; do
@@ -59,6 +53,12 @@ jobs:
         done
         echo "Server started!"
 
+    - name: Run Load Tests
+      run: go test -v -run ^TestLoad$ -timeout 0 ./internal/handler/...
+      # -v: 詳細出力
+      # -run ^TestLoad$: TestLoad関数のみ実行
+      # -timeout 0: タイムアウト無制限
+      # ./internal/handler/...: テスト対象パッケージ
 
     - name: Upload Go Benchmark Results
       uses: actions/upload-artifact@v4
